# persistent-tui

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: event_loop.rs
src/: lib.rs  utils.rs
src/componets/: component.rs  frame.rs  mod.rs  widget.rs
src/events/: any.rs  event.rs  mod.rs
src/widgets/: button.rs  color.rs  input.rs  input2.rs  mod.rs
