[package]
name = "persisten-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.48.0", features = ["full"] }
color-eyre = "0.6.5"
palette = "0.7.6"
tui-input = { version = "0.14.0", features = ["crossterm"], default-features = false }
